# target-lightspeed

./: LICENSE  README.md  meltano.yml  pyproject.toml
target_lightspeed/: __init__.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py
